--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Noto Sans JP",
+    "Noto Sans CJK JP", "BIZ UDPGothic", "Meiryo", "BlinkMacSystemFont",
+    sans-serif;
+}
